# riscv-simulator

./: .gitignore  CMakeLists.txt  README.md  decoder.h  opcode.h
inc/: Contex.h  Instr_impl.h  Processor.h  context.h  decoder.h  elf_reader.h  instr_impl.h  memory.h  opcode.h  processor.h
src/: Contex.cpp  Instr_impl.cpp  Processor.cpp  context.cpp  decoder.cpp  elf_reader.cpp  instr_impl.cpp  main.cpp  memory.cpp  processor.cpp
test/: a.out  disasm  test1.c  test1.s
